# solar

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  main.py  pyproject.toml  stage_one.py  stage_two.py
eval/: sara_interpreter_o1.py  sara_statute.txt  sara_tbox_o1.json
solar/: knowledge_acquisition.py  knowledge_application.py  model.py  validation.py
